Tier 4: comprehensive 10-pillar audit — entity safety, validation, security, resilience, observability, DevOps
## Pillar 1 — Clean Architecture
- Replace @Data with @Getter/@Setter + explicit equals/hashCode on all JPA entities
  (Payment, Transaction, User, AuditLog): @Data on managed entities causes broken
  proxy equality, lazy-load in toString, and Hibernate dirty-checking false positives
- toString() on User intentionally omits password to prevent PII leakage in logs

## Pillar 2 — API Design
- PaymentRequest: replace @Size(10) with @Pattern(regexp="\d{10}") to reject
  non-digit 10-char accounts (e.g. "aaaaaaaaaa") that @Size alone allowed
- PaymentRequest: replace @Positive with @DecimalMin("0.01") + @Digits for precise
  validation; add @Pattern for uppercase ISO 4217 currency enforcement
- ReversalRequest: add @DecimalMin("0.01") + @Digits on reversalAmount so
  zero/negative reversal amounts are caught at the DTO layer, not business logic
- AuthController.login(): ResponseEntity<?> → ResponseEntity<Object> for correct
  OpenAPI schema generation
- PaymentController: add class-level @PreAuthorize("hasRole('USER')") for
  defense-in-depth beyond URL-pattern security; add @SecurityRequirement for
  Swagger UI to show the bearer lock on all payment endpoints

## Pillar 3 — JPA/Persistence
- V4 Flyway migration: add idx_payments_created_at, composite idx_payments_status_created_at,
  idx_payments_source_account, idx_payments_destination_account — all used in
  production query paths but previously unindexed, causing full table scans

## Pillar 4 — Security
- RateLimitInterceptor: replace @Autowired field injection with constructor injection;
  remove trust of X-Forwarded-For / X-Real-IP headers (IP spoofing vector) — rate
  limiting now uses RemoteAddr exclusively with an explanatory comment directing
  proxy-header sanitisation to the proxy layer
- JwtTokenFilter: add try/catch around getAuthentication() so an exception
  (e.g. user deleted since token was iss