@@ -5,7 +5,6 @@ import io.github.resilience4j.ratelimiter.RateLimiterConfig;
 import io.github.resilience4j.ratelimiter.RateLimiterRegistry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.HandlerInterceptor;
@@ -16,8 +15,20 @@ import java.time.Duration;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
- * Rate limiting interceptor using Resilience4j.
- * Limits requests per client based on API key or IP address.
+ * Rate-limiting interceptor backed by Resilience4j per-client RateLimiters.
+ *
+ * <p>Client identity is derived from:
+ * <ol>
+ *   <li>X-Api-Key header (preferred — identifies authenticated API consumers)</li>
+ *   <li>RemoteAddr (fallback for anonymous callers — NOT proxy headers, to prevent
+ *       IP-spoofing via crafted X-Forwarded-For / X-Real-IP values)</li>
+ * </ol>
+ *
+ * NOTE: If this service sits behind a trusted reverse proxy that terminates TLS
+ * and injects X-Forwarded-For, configure the proxy to sanitise that header
+ * rather than reading it here, to prevent clients from spoofing their IP.
+ *
+ * Constructor injection is used — never @Autowired field injection.
  */
 @Component
 public class RateLimitInterceptor implements HandlerInterceptor {
@@ -25,87 +36,62 @@ public class RateLimitInterceptor implements HandlerInterceptor {
     private static final Logger logger = LoggerFactory.getLogger(RateLimitInterceptor.class);
 
     private final ConcurrentHashMap<String, RateLimiter> rateLimiters = new ConcurrentHashMap<>();
+    private final RateLimitProperties rateLimitProperties;
 
-    @Autowired
-    private RateLimitProperties rateLimitProperties;
+    public RateLimitInterceptor(RateLimitProperties rateLimitProperties) {
+        this.rateLimitProperties = rateLimitProperties;
+    }
 
     @Override
-    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-        // Get client identifier (API key or IP address as fallback)
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler)
+            throws Exception {
         String clientId = getClientIdentifier(request);
-
-        RateLimiter rateLimiter = rateLimiters.computeIfAbsent(clientId, key -> createRateLimiter(key));
-
+        RateLimiter rateLimiter = rateLimiters.computeIfAbsent(clientId, this::createRateLimiter);
         boolean allowRequest = rateLimiter.acquirePermission();
 
-        // Add rate limit headers
         response.addHeader("X-RateLimit-Limit", String.valueOf(rateLimitProperties.getLimit()));
         response.addHeader("X-RateLimit-Remaining",
                 String.valueOf(rateLimiter.getMetrics().getAvailablePermissions()));
         response.addHeader("X-RateLimit-Reset",
-                String.valueOf(System.currentTimeMillis() +
-                        rateLimiter.getRateLimiterConfig().getLimitRefreshPeriod().toMillis()));
+                String.valueOf(System.currentTimeMillis()
+                        + rateLimiter.getRateLimiterConfig().getLimitRefreshPeriod().toMillis()));
 
         if (!allowRequest) {
             logger.warn("Rate limit exceeded for client: {}", maskClientId(clientId));
             response.setStatus(HttpStatus.TOO_MANY_REQUESTS.value());
-            response.setContentType("application/json");
-            response.getWriter().write("{\"error\":\"Too many requests\",\"message\":\"Rate limit exceeded. Please try again later.\"}");
+            response.setContentType("application/json;charset=UTF-8");
+            response.getWriter().write(
+                    "{\"status\":429,\"error\":\"Too Many Requests\","
+                    + "\"message\":\"Rate limit exceeded. Please try again later.\"}");
             return false;
         }
-
         return true;
     }
 
     /**
-     * Gets the client identifier for rate limiting.
-     * Uses API key if provided, otherwise falls back to IP address.
+     * Derives a rate-limit bucket key from the request.
+     * Uses API key if present; falls back to the TCP remote address.
+     * Proxy headers (X-Forwarded-For) are intentionally NOT trusted here —
+     * they can be spoofed by any client and must be sanitised at the proxy layer.
      */
     private String getClientIdentifier(HttpServletRequest request) {
         String apiKey = request.getHeader("X-Api-Key");
-        if (apiKey != null && !apiKey.trim().isEmpty()) {
+        if (apiKey != null && !apiKey.isBlank()) {
             return "apikey:" + apiKey;
         }
-
-        // Fall back to IP address
-        String clientIp = getClientIpAddress(request);
-        return "ip:" + clientIp;
-    }
-
-    /**
-     * Gets the client IP address, handling proxied requests.
-     */
-    private String getClientIpAddress(HttpServletRequest request) {
-        String xForwardedFor = request.getHeader("X-Forwarded-For");
-        if (xForwardedFor != null && !xForwardedFor.isEmpty()) {
-            // Take the first IP in the list (original client)
-            return xForwardedFor.split(",")[0].trim();
-        }
-
-        String xRealIp = request.getHeader("X-Real-IP");
-        if (xRealIp != null && !xRealIp.isEmpty()) {
-            return xRealIp;
-        }
-
-        return request.getRemoteAddr();
+        return "ip:" + request.getRemoteAddr();
     }
 
     private RateLimiter createRateLimiter(String clientId) {
         logger.debug("Creating rate limiter for client: {}", maskClientId(clientId));
-
         RateLimiterConfig config = RateLimiterConfig.custom()
                 .limitRefreshPeriod(Duration.ofMillis(rateLimitProperties.getRefreshPeriod()))
                 .limitForPeriod(rateLimitProperties.getLimit())
                 .timeoutDuration(Duration.ofMillis(rateLimitProperties.getTimeout()))
                 .build();
-
-        RateLimiterRegistry registry = RateLimiterRegistry.of(config);
-        return registry.rateLimiter(clientId);
+        return RateLimiterRegistry.of(config).rateLimiter(clientId);
     }
 
-    /**
-     * Masks client ID for logging security.
-     */
     private String maskClientId(String clientId) {
         if (clientId == null || clientId.length() < 8) {
             return "****";
@@ -116,9 +102,7 @@ public class RateLimitInterceptor implements HandlerInterceptor {
         return clientId;
     }
 
-    /**
-     * Clears all rate limiters (for testing purposes).
-     */
+    /** Clears all per-client rate limiters — intended for test teardown only. */
     public void clearRateLimiters() {
         rateLimiters.clear();
     }
